// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`programs routes GET /api/programs/single-program/v1 gets a single program for the user 1`] = `
Object {
  "enddate": "2022-10-23",
  "endgoal": "180",
  "endweight": null,
  "id": 1,
  "result": "TBD",
  "startdate": "2022-09-18",
  "startweight": "175",
  "status": "IN_PROGRESS",
  "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
}
`;

exports[`programs routes GET /api/programs/v1 gets all programs for the user 1`] = `
Array [
  Object {
    "enddate": "2022-10-23",
    "endgoal": "180",
    "endweight": null,
    "id": 1,
    "result": "TBD",
    "startdate": "2022-09-18",
    "startweight": "175",
    "status": "IN_PROGRESS",
    "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
  },
]
`;

exports[`programs routes POST /api/programs/v1 creates a program for the user 1`] = `
Object {
  "enddate": "2022-10-23",
  "endgoal": "180",
  "endweight": null,
  "id": 6037,
  "result": "TBD",
  "startdate": "2022-09-18",
  "startweight": "175",
  "status": "IN_PROGRESS",
  "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
}
`;

exports[`programs routes POST /api/programs/v1 validates the req 1`] = `
Array [
  Object {
    "context": Object {
      "key": "units",
      "label": "units",
    },
    "message": "\\"units\\" is required",
    "path": Array [
      "units",
    ],
    "type": "any.required",
  },
  Object {
    "context": Object {
      "key": "weight",
      "label": "weight",
    },
    "message": "\\"weight\\" is required",
    "path": Array [
      "weight",
    ],
    "type": "any.required",
  },
  Object {
    "context": Object {
      "key": "goal",
      "label": "goal",
    },
    "message": "\\"goal\\" is required",
    "path": Array [
      "goal",
    ],
    "type": "any.required",
  },
]
`;
